@@ -1,3 +1,7 @@
+Thu Jul 22 12:13:56 BST 2004 (trog)
+-----------------------------------
+ * libclamav/chmunpack.c: bound memory usage; cleanups.
+
 Thu Jul 22 10:17:01 BST 2004 (njh)
 ----------------------------------
   * clamav-milter:	Use gethostbyname_r when available
